[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Sprites/Characters/MegaMan.png" type="Texture" id=1]
[ext_resource path="res://Misc/PlatformerSprite/PlatformerSprite.gd" type="Script" id=2]
[ext_resource path="res://Misc/PaletteSpriteCore/PaletteSpriteCore.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Damage Sliding"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump Falling"
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=5]
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=6]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 116, 117, 116 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Shooting Jump Falling"
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 125, 126 ]
}

[sub_resource type="Animation" id=8]
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 123, 124 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Shooting Sliding"
length = 0.16
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 127, 128 ]
}

[sub_resource type="Animation" id=10]
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 119, 120, 121, 122 ]
}

[sub_resource type="Animation" id=11]
length = 0.16
loop = true
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 118 ]
}

[sub_resource type="Animation" id=14]
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6 ]
}

[node name="PlatformerSprite" type="Sprite"]
z_as_relative = false
texture = ExtResource( 1 )
offset = Vector2( 1, 1 )
hframes = 116
vframes = 16
frame = 13
script = ExtResource( 2 )

[node name="CharacterPlatformerAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 1 )
"anims/Damage Sliding" = SubResource( 2 )
anims/Idle = SubResource( 3 )
"anims/Jump Falling" = SubResource( 4 )
"anims/Jump Up" = SubResource( 5 )
"anims/Shooting Idle" = SubResource( 6 )
"anims/Shooting Jump Falling" = SubResource( 7 )
"anims/Shooting Jump Up" = SubResource( 8 )
"anims/Shooting Sliding" = SubResource( 9 )
"anims/Shooting Walk" = SubResource( 10 )
anims/Sliding = SubResource( 11 )
"anims/Tipping Toe" = SubResource( 12 )
"anims/Tipping Toe Shooting" = SubResource( 13 )
anims/Walk = SubResource( 14 )

[node name="NormalAttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="PaletteSprite" parent="." instance=ExtResource( 3 )]
z_as_relative = false
primary_color_frame_add = 29
secondary_color_frame_add = 58
outline_color_frame_add = 87

[connection signal="timeout" from="NormalAttackCooldown" to="." method="_on_NormalAttackCooldown_timeout"]
